k8s-hd-custom/networkpolicy/adservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adservice-allow-from-frontend
spec:
  podSelector:
    matchLabels:
      app: adservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 9555
