k8s-hd-custom/networkpolicy/emailservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: emailservice-allow-from-checkout
spec:
  podSelector:
    matchLabels:
      app: emailservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: checkoutservice
      ports:
        - protocol: TCP
          port: 8080
