k8s-hd-custom/networkpolicy/productcatalogservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: productcatalogservice-allow-callers
spec:
  podSelector:
    matchLabels:
      app: productcatalogservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
        - podSelector:
            matchLabels:
              app: checkoutservice
        - podSelector:
            matchLabels:
              app: recommendationservice
      ports:
        - protocol: TCP
          port: 3550
