k8s-hd-custom/networkpolicy/recommendationservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: recommendationservice-allow-from-frontend
spec:
  podSelector:
    matchLabels:
      app: recommendationservice
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 8080
