k8s-hd-custom/networkpolicy/redis-cart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-cart-allow-from-cartservice
spec:
  podSelector:
    matchLabels:
      app: redis-cart
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: cartservice
      ports:
        - protocol: TCP
          port: 6379
